fixed main image on mobile

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -101,7 +101,6 @@
   }
 
   .cat-picture{
-    width: 20%;
     border-radius: 20px;
     margin: 0 10px;
   }
@@ -132,7 +131,8 @@
     text-decoration: none;
     background-color: var(--primary);
     border-radius: 20px;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Roboto Mono', monospace;
+    font-size: 90%;
     transition: all 0.3s ease;
   }
   
